[package]
name = "cuebasic"
version = "0.1.0"
edition = "2021"
authors = ["Alex Sayers <alex@asayers.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/cuebasic"

[dependencies]
anyhow = "1.0.70"
bpaf = { version = "0.9.11", features = ["derive"] }
itertools = "0.12.1"
logos = "0.14.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
scientific = "0.5.2"
serde_json = { version = "1.0.96", optional = true }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"

[features]
default = ["serde_json"]
